@@ -1,7 +1,7 @@
 // Copyright 2002-2013, University of Colorado Boulder
 
 /**
- * The 'Example Sim' tab. Conforms to the contract specified in joist/Tab
+ * The 'Bar Magnet' screen. Conforms to the contract specified in joist/Screen.
  *
  * @author Chris Malley (PixelZoom, Inc.)
  */
@@ -14,10 +14,9 @@ define( function( require ) {
   var ExampleSimStrings = require( 'common/ExampleSimStrings' );
   var Rectangle = require( 'SCENERY/nodes/Rectangle' );
 
-  function BarMagnetTab() {
+  function BarMagnetScreen() {
 
     this.name = ExampleSimStrings.exampleSim;
-    this.icon = new Rectangle( 0, 0, 50, 50, {fill: 'blue'} ); // a dummy icon for single-tab sim
     this.backgroundColor = 'rgb(50,50,50)'; // dark gray
 
     this.createModel = function() {
@@ -30,5 +29,5 @@ define( function( require ) {
   }
 
 
-  return BarMagnetTab;
+  return BarMagnetScreen;
 } );
